--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -3,3 +3,23 @@
 <a href="./?search=ourText#interview">interju</a>
 <a href="./#test">test</a>
 <a href="./#gallery">gallery</a>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#simple-dialog">Open dialog</button>
+
+<div id="simple-dialog" class="modal fade" tabindex="-1" style="display: none;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>E dolore commodo, id anim aute sint cupidatat eu est anim tamen ad possumus,
+                    legam officia firmissimum. Eram deserunt domesticarum, iis ita praetermissum,
+                    nam aliquip quo probant, incididunt et occaecat an nam enim exquisitaque a
+                    nescius velit admodum, non ad cohaerescant, probant o nulla tempor. Aute aut te
+                    quis arbitror ubi ne aliqua consequat aliquip. Ad sunt laborum senserit, de do
+                    quem possumus. Sint tractavissent cupidatat aute possumus ita elit ad cupidatat.
+                    Arbitror ab fabulas o eu e veniam pariatur. Non voluptate comprehenderit ad nisi
+                    id voluptate. Quis distinguantur quibusdam quae mentitum o si minim illum nisi
+                    mandaremus.</p>
+            </div>
+        </div>
+    </div>
+</div>
