--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -1,4 +1,4 @@
-<h1>Fullscreen</h1>
+<!--<h1>Fullscreen</h1>
 <a href="./">home</a>
 <a href="./?search=ourText#interview">interju</a>
 <a href="./#test">test</a>
@@ -22,4 +22,46 @@
             </div>
         </div>
     </div>
+</div>-->
+
+
+
+
+<div id="main">
+    <div class="bs-header">
+        <div class="container">
+            <h1>Razstava slik Mirana Eriča v novi stavbi FRI</h1>
+        </div>
+    </div>
+    <div class="bs-body">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-wrapper">
+                        <i class="icon-home"></i>
+                        <h3>Aliquam in adipiscing</h3>
+                        <p>Praesent rhoncus mauris ac sollicitudin vehicula. Nam fringilla turpis turpis, at posuere turpis aliquet sit amet condimentum</p>
+                        <a href="./" class="btn">Home</a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-wrapper">
+                        <i class="icon-briefcase"></i>
+                        <h3>Curabitur mollis</h3>
+                        <p>Suspendisse eget libero mi. Fusce ligula orci, vulputate nec elit ultrices, ornare faucibus orci. Aenean lectus sapien, vehicula</p>
+                        <a href="./?search=ourText#interview" class="btn">Interview</a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="service-wrapper">
+                        <i class="icon-calendar"></i>
+                        <h3>Vivamus mattis</h3>
+                        <p>Phasellus posuere et nisl ac commodo. Nulla facilisi. Sed tincidunt bibendum cursus. Aenean vulputate aliquam risus rutrum scelerisque</p>
+                        <a href="./#gallery" class="btn">Gallery</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<img src="images/Labod_small.png" alt="Mountain View" style="width:100%;">
