--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -1,67 +1,76 @@
-<!--<h1>Fullscreen</h1>
-<a href="./">home</a>
-<a href="./?search=ourText#interview">interju</a>
-<a href="./#test">test</a>
-<a href="./#gallery">gallery</a>
+<div id="main">
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#simple-dialog">Open dialog</button>
+    <div class="bs-header">
+        <div class="container">
+            <h1>Razstava slik mag. Mirana Eriča</h1>
+            <h4>na Fakulteti za računalništvo in informatiko</h4>
+        </div>
+    </div>
 
-<div id="simple-dialog" class="modal fade" tabindex="-1" style="display: none;">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <p>E dolore commodo, id anim aute sint cupidatat eu est anim tamen ad possumus,
-                    legam officia firmissimum. Eram deserunt domesticarum, iis ita praetermissum,
-                    nam aliquip quo probant, incididunt et occaecat an nam enim exquisitaque a
-                    nescius velit admodum, non ad cohaerescant, probant o nulla tempor. Aute aut te
-                    quis arbitror ubi ne aliqua consequat aliquip. Ad sunt laborum senserit, de do
-                    quem possumus. Sint tractavissent cupidatat aute possumus ita elit ad cupidatat.
-                    Arbitror ab fabulas o eu e veniam pariatur. Non voluptate comprehenderit ad nisi
-                    id voluptate. Quis distinguantur quibusdam quae mentitum o si minim illum nisi
-                    mandaremus.</p>
+    <div id="bs-body">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="col-md-4 col-sm-4">
+                        <div class="col-md-2 col-sm-2"></div>
+                        <div class="col-md-8 col-sm-8">
+                            <img src="images/milan_eric.jpg" class="img-circle">
+                        </div>
+                    </div>
+                    <br>
+                    <p class="pbody">
+                        Mag. Miran Eričje dodiplomski študij končal na Akademiji za likovno umetnost v Ljubljani, magistrski pa na Filozofski fakulteti v Ljubljani, na oddelku za arheologijo. Zaposlen je na Zavodu za varstvo kulturne dediščine Slovenije in skrbi za zaščito podvodne dediščine, na študijski smeri Heritologija na Filozofski fakulteti pa zaključuje doktorat iz področja uporabe slikovnega jezika v arheologiji. Ker je tematika močno povezana tudi z računalništvom in informatiko je njegov somentor, ob doc. dr. Dimitriju Mlekužu in doc. dr. Jelki Pirkovič, tudi prof. dr. Franc Solina iz Laboratorija za računalniški vid.
+                    </p>
+                </div>
+                <div class="col-md-12 col-sm-12">
+                    <img src="images/expand.png" id="hide">
+                </div>
             </div>
         </div>
     </div>
-</div>-->
 
-
-
-
-<div id="main">
-    <div class="bs-header">
-        <div class="container">
-            <h1>Razstava slik Mirana Eriča v novi stavbi FRI</h1>
-        </div>
-    </div>
-    <div class="bs-body">
+    <div id="bs-tail">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="service-wrapper">
-                        <i class="icon-home"></i>
-                        <h3>Aliquam in adipiscing</h3>
-                        <p>Praesent rhoncus mauris ac sollicitudin vehicula. Nam fringilla turpis turpis, at posuere turpis aliquet sit amet condimentum</p>
-                        <a href="./" class="btn">Home</a>
+                <div class="col-md-12 col-sm-12">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-wrapper">
+                            <h3>mag. Miran Erič</h3>
+                            <p>Preberite si življenjepis in povezanost akademskega slikarja mag. Mirana Eriča z našo fakulteto.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-wrapper">
+                            <h3>Intervju</h3>
+                            <p>Z mag. Miranom Eričem smo se pogovarjali o njegovem delu in vključitvi svojih del v našo novo stavbo.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-wrapper">
+                            <h3>Galerija slik</h3>
+                            <p>Akademski slikar, mag. Miran Erič je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo posebni pridih značilen za galerijske prostore.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="service-wrapper">
-                        <i class="icon-briefcase"></i>
-                        <h3>Curabitur mollis</h3>
-                        <p>Suspendisse eget libero mi. Fusce ligula orci, vulputate nec elit ultrices, ornare faucibus orci. Aenean lectus sapien, vehicula</p>
-                        <a href="./?search=ourText#interview" class="btn">Interview</a>
+                <div class="col-md-12 col-sm-12">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-wrapper">
+                            <div id="detail" class="btn">O avtorju</div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="service-wrapper">
-                        <i class="icon-calendar"></i>
-                        <h3>Vivamus mattis</h3>
-                        <p>Phasellus posuere et nisl ac commodo. Nulla facilisi. Sed tincidunt bibendum cursus. Aenean vulputate aliquam risus rutrum scelerisque</p>
-                        <a href="./#gallery" class="btn">Gallery</a>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-wrapper">
+                            <a href="./?search=ourText#interview" class="btn">Intervju</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-wrapper">
+                            <a href="./#gallery" class="btn">Galerija</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<img src="images/Labod_small.png" alt="Mountain View" style="width:100%;">
+<img src="images/Labod_small.png" class="bg">
