Dodal osnovni view

--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -3,6 +3,7 @@
 <a href="./?search=ourText#interview">interju</a>
 <a href="./#test">test</a>
 <a href="./#gallery">gallery</a>
+<a href="./#galleryBasic">Basic galery</a>
 
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#simple-dialog">Open dialog</button>
 
