--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,19 +1,40 @@
 /* Main gallery page */
+body,
+#app-content {
+  min-height: 100vh;
+  width: 100%;
+}
+.basicGalleryPage {
+  background-image: url("../images/backgrounds/betonZid.png");
+  background-repeat: repeat;
+  min-height: 100vh;
+}
 .basicGalleryPage .row {
   padding: 0;
   margin: 0;
 }
 .basicGalleryPage .siderItem {
-  padding: 5px 0;
+  padding: 5px 0px;
 }
 .basicGalleryPage .btn {
   white-space: normal;
+  background: #ffffff;
+}
+.basicGalleryPage .btn-red {
+  background-color: #dc211c !important;
 }
 .basicGalleryPage .interviewLink {
   padding: 5px 0;
 }
 .basicGalleryPage .galleryBasicImgDescription {
+  margin-top: 10px;
   padding: 30px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #ffffff;
+  border-radius: 2vw;
+}
+.basicGalleryPage .active {
+  opacity: 0.6;
 }
 /* First page */
 .firstPageTpl {
