--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -26,12 +26,17 @@ body,
 .basicGalleryPage .interviewLink {
   padding: 5px 0;
 }
+.basicGalleryPage .imgContainer {
+  height: 50vh;
+  padding: 0 !important;
+}
 .basicGalleryPage .galleryBasicImgDescription {
-  margin-top: 10px;
-  padding: 30px;
+  margin-top: 1vh;
+  padding: 15px;
   background: rgba(0, 0, 0, 0.8);
+  box-shadow: 4px 5px 2px #000000;
   color: #ffffff;
-  border-radius: 2vw;
+  border-radius: 1vw;
 }
 .basicGalleryPage .active {
   opacity: 0.6;
