--- a/templates/galleryBasic.handlebars
+++ b/templates/galleryBasic.handlebars
@@ -11,7 +11,7 @@
             {{/each}}
         </div>
         <div class="col-md-6 col-sm-8">
-            <div class="col-md-12" style="height:50vh">
+            <div class="col-md-12 imgContainer" >
                 <img src="./images/small/RibaRaca.png" width="100%" height="100%"/>
             </div>
             <div class="col-md-12 galleryBasicImgDescription" >
