--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -13,22 +13,43 @@ body,
   padding: 0;
   margin: 0;
 }
+.basicGalleryPage .centerFlex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.basicGalleryPage .sider {
+  background: rgba(0, 0, 0, 0.8);
+  padding-top: 5px;
+  border: 3px solid #000000;
+  border-radius: 3px;
+  padding-bottom: 5px;
+}
 .basicGalleryPage .siderItem {
   padding: 5px 0px;
 }
 .basicGalleryPage .btn {
   white-space: normal;
-  background: #ffffff;
+  background-color: #ffffff;
 }
-.basicGalleryPage .btn-red {
-  background-color: #dc211c !important;
+.basicGalleryPage .btn-gray {
+  background-color: rgba(0, 0, 0, 0.8) !important;
+  color: #ffffff;
 }
 .basicGalleryPage .interviewLink {
   padding: 5px 0;
 }
 .basicGalleryPage .imgContainer {
   height: 50vh;
+  text-align: center;
+}
+.basicGalleryPage .imgContainer img {
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  max-height: 100%;
   padding: 0 !important;
+  box-shadow: 4px 5px 2px #000000;
 }
 .basicGalleryPage .galleryBasicImgDescription {
   margin-top: 1vh;
@@ -36,7 +57,9 @@ body,
   background: rgba(0, 0, 0, 0.8);
   box-shadow: 4px 5px 2px #000000;
   color: #ffffff;
-  border-radius: 1vw;
+  border-radius: 3px;
+  border: 3px solid #000000;
+  text-align: center;
 }
 .basicGalleryPage .active {
   opacity: 0.6;
