--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -1,14 +1,17 @@
 /* Main gallery page */
-@white : #ffffff;
-@black : #000000;
-@indexHeaderRedColor : #dc211c;
+@white: #ffffff;
+@black: #000000;
+@niceGray: #333333;
+@transparentBlack: rgba(0, 0, 0, 0.8);
+@indexHeaderRedColor: #dc211c;
 
-body,#app-content{
+body, #app-content {
   min-height: 100vh;
   width: 100%;
 }
-.basicGalleryPage {
 
+
+.basicGalleryPage {
   background-image: url("../images/backgrounds/betonZid.png");
   background-repeat: repeat;
   min-height: 100vh;
@@ -17,33 +20,57 @@ body,#app-content{
     padding: 0;
     margin: 0;
   }
+  .centerFlex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .sider{
+    background: @transparentBlack;
+    padding-top: 5px;
+    border:3px solid @black;
+    border-radius: 3px;
+    padding-bottom: 5px;
+  }
   .siderItem {
     padding: 5px 0px;
   }
   .btn {
     white-space: normal;
-    background: @white;
+    background-color: @white;
   }
-  .btn-red{
-    background-color: @indexHeaderRedColor !important;
+  .btn-gray {
+    background-color: @transparentBlack !important;
+    color: @white;
   }
   .interviewLink {
     padding: 5px 0;
   }
-  .imgContainer{
+  .imgContainer {
     height: 50vh;
-    padding: 0 !important;
+    text-align: center;
+    img{
+      height: auto;
+      width: auto;
+      max-width: 100%;
+      max-height: 100%;
+      padding: 0 !important;
+      box-shadow: 4px 5px 2px @black;
+    }
   }
+
   .galleryBasicImgDescription {
     margin-top: 1vh;
     padding: 15px;
-    background: rgba(0,0,0,0.8);
+    background: @transparentBlack;
     box-shadow: 4px 5px 2px @black;
     color: @white;
-    border-radius: 1vw;
+    border-radius: 3px;
+    border:3px solid @black;
+    text-align: center;
   }
-  .active{
-      opacity: 0.6;
+  .active {
+    opacity: 0.6;
   }
 }
 
@@ -71,7 +98,7 @@ body,#app-content{
     width: 100%;
     padding: 2%;
     color: @white;
-    background-color: #333333;
+    background-color: @niceGray;
     opacity: 0.95;
     filter: alpha(opacity=95); /* For IE8 and earlier */
   }
@@ -81,7 +108,7 @@ body,#app-content{
     width: 100%;
     padding: 2%;
     color: @white;
-    background-color: #333333;
+    background-color: @niceGray;
     opacity: 0.95;
     filter: alpha(opacity=95); /* For IE8 and earlier */
   }
