--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -153,8 +153,12 @@ img.firstPageTplBg {
   /*content fill */
 }
 /* Interview */
+.interviewPage {
+  /*background-image: url("../images/backgrounds/betonZid.png");*/
+}
 .interviewPage .indexContainer {
   position: fixed;
+  font-size: 80%;
 }
 .interviewPage .indexContainer ul {
   list-style: none;
@@ -167,8 +171,18 @@ img.firstPageTplBg {
   border-left: 3px solid #000000;
   padding-left: 5px;
 }
+.interviewPage .indexContainer ul li.active {
+  padding-left: 10px;
+  border-left: 3px solid #000000 !important;
+  font-weight: bolder;
+}
 @media screen and (max-width: 992px) {
   .interviewPage .indexContainer {
     position: static;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .interviewPage .indexContainer {
+    font-size: 80%;
   }
 }
