--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -170,23 +170,38 @@ img.firstPageTplBg {
 /* Interview */
 
 .interviewPage {
+  /*background-image: url("../images/backgrounds/betonZid.png");*/
   .indexContainer{
     position:fixed;
+    font-size: 80%;
     ul {
       list-style: none;
+
+      li{
+        padding: 3px 0;
+      }
+      li:hover{
+        cursor: pointer;
+        border-left: 3px solid @black;
+        padding-left: 5px;
+      }
+      li.active{
+        padding-left: 10px;
+        border-left: 3px solid @black !important;
+        font-weight: bolder;
+      }
     }
-    ul li{
-      padding: 3px 0;
-    }
-    ul li:hover{
-      cursor: pointer;
-      border-left: 3px solid @black;
-      padding-left: 5px;
-    }
+
   }
   @media screen and (max-width: 992px){
     .indexContainer{
       position:static;
+
+    }
+  }
+  @media screen and (max-width: 1500px){
+    .indexContainer{
+      font-size: 80%;
     }
   }
 }
