--- a/templates/interview.handlebars
+++ b/templates/interview.handlebars
@@ -6,11 +6,11 @@
         <div class="col-md-3 col-md-offset-1 indexContainer">
             <ul>
                 {{#each data.parts}}
-                    <li><a href="#{{@key}}">{{this.title}}</a></li>
+                    <li><a href="#{{@key}}" >{{this.title}}</a></li>
                 {{/each}}
             </ul>
         </div>
-        <div class="col-md-7 col-md-offset-4">
+        <div class="interviewContent col-md-7 col-md-offset-4 col-xs-10 col-xs-offset-1">
             <h2>Nova zgradba FRI z umetniškim pridihom</h2>
             <br/>
             <br/>
