Spreminjanje izgleda začetne strani

--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -137,9 +137,16 @@ body, #app-content {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
   }
-
+  
   .btn {
     color: @white;
+    line-height: 1.6;
+    white-space: normal;
+    vertical-align: baseline;
+    text-transform: inherit;
+    letter-spacing:  normal;
+    margin-bottom: auto;
+    font-size: inherit;
   }
 
   .p {
