--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -40,37 +40,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-wrapper">
+                    <div class="col-md-3 col-sm-6 btn">
+                        <div id="detail" class="service-wrapper" style="padding-left: 5%">
                             <h3>mag. Miran Erič</h3>
                             <p>Preberite si življenjepis in povezanost akademskega slikarja mag. Mirana Eriča z našo fakulteto.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-wrapper">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="service-wrapper" style="padding-left: 5%">
                             <h3>Intervju</h3>
                             <p>Z mag. Miranom Eričem smo se pogovarjali o njegovem delu in vključitvi svojih del v našo novo stavbo.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-wrapper">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="service-wrapper" style="padding-left: 5%">
                             <h3>Galerija slik</h3>
-                            <p>Akademski slikar, mag. Miran Erič je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo posebni pridih značilen za galerijske prostore.</p>
+                            <p>Akademski slikar, mag. Miran Erič je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo pridih značilen za galerijske prostore.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="service-wrapper" style="padding-left: 5%">
+                            <h3>Postavljanje slik</h3>
+                            <p>Akademski slikar, mag. Miran Erič je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo pridih značilen za galerijske prostore.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-12 col-sm-12">
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-3 col-sm-6">
                         <div class="service-wrapper">
-                            <div id="detail" class="btn">O avtorju</div>
+                            <div  class="btn">O avtorju</div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-3 col-sm-6">
                         <div class="service-wrapper">
                             <a href="./#interview" class="btn">Intervju</a>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-3 col-sm-6">
                         <div class="service-wrapper">
                             <a href="./#galleryBasic" class="btn">Galerija</a>
                         </div>
