--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -110,7 +110,6 @@ body, #app-content {
   #bs-tail {
     position: relative;
     width: 100%;
-    padding: 2%;
     color: @white;
     background-color: @niceGray;
     opacity: 0.95;
@@ -141,9 +140,13 @@ body, #app-content {
   .btn {
     color: @white;
     line-height: 1.6;
+    min-height: 200px;
+    padding-top: 2.5%;
+    padding-bottom: 2%;
     white-space: normal;
     vertical-align: baseline;
     text-transform: inherit;
+    text-align: left;
     letter-spacing:  normal;
     margin-bottom: auto;
     font-size: inherit;
