--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -18,16 +18,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div class="col-md-4 col-sm-4">
-                        <div class="col-md-2 col-sm-2"></div>
-                        <div class="col-md-8 col-sm-8">
+                    <div class="col-md-4 col-sm-12 col-xs-12">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-8 col-sm-12 col-xs-12">
                             <img src="images/milan_eric.jpg" class="img-circle">
                         </div>
                     </div>
-                    <br>
-                    <p class="pbody">
-                        Mag. Miran Eričje dodiplomski študij končal na Akademiji za likovno umetnost v Ljubljani, magistrski pa na Filozofski fakulteti v Ljubljani, na oddelku za arheologijo. Zaposlen je na Zavodu za varstvo kulturne dediščine Slovenije in skrbi za zaščito podvodne dediščine, na študijski smeri Heritologija na Filozofski fakulteti pa zaključuje doktorat iz področja uporabe slikovnega jezika v arheologiji. Ker je tematika močno povezana tudi z računalništvom in informatiko je njegov somentor, ob doc. dr. Dimitriju Mlekužu in doc. dr. Jelki Pirkovič, tudi prof. dr. Franc Solina iz Laboratorija za računalniški vid.
-                    </p>
+                    <div class="col-md-8 col-sm-12 col-xs-12">
+                        <br>
+                        <p class="pbody">
+                            Mag. Miran Eričje dodiplomski študij končal na Akademiji za likovno umetnost v Ljubljani, magistrski pa na Filozofski fakulteti v Ljubljani, na oddelku za arheologijo. Zaposlen je na Zavodu za varstvo kulturne dediščine Slovenije in skrbi za zaščito podvodne dediščine, na študijski smeri Heritologija na Filozofski fakulteti pa zaključuje doktorat iz področja uporabe slikovnega jezika v arheologiji. Ker je tematika močno povezana tudi z računalništvom in informatiko je njegov somentor, ob doc. dr. Dimitriju Mlekužu in doc. dr. Jelki Pirkovič, tudi prof. dr. Franc Solina iz Laboratorija za računalniški vid.
+                        </p>
+                    </div>
                 </div>
                 <div class="col-md-12 col-sm-12">
                     <img src="images/expand.png" id="hide">
@@ -39,15 +41,15 @@
     <div id="bs-tail">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="col-md-3 col-sm-6 btn">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-md-3 col-sm-6 col-xs-6 btn">
                         <div id="detail" class="service-wrapper" style="padding-left: 5%">
                             <h3>mag. Miran Erič</h3>
                             <p>Preberite si življenjepis in povezanost akademskega slikarja mag. Mirana Eriča z našo fakulteto.</p>
                         </div>
                     </div>
                     <a href="./#interview">
-                        <div class="col-md-3 col-sm-6 btn">
+                        <div class="col-md-3 col-sm-6 col-xs-6 btn">
                             <div class="service-wrapper" style="padding-left: 5%">
                                 <h3>Intervju</h3>
                                 <p>Z mag. Miranom Eričem smo se pogovarjali o njegovem delu in vključitvi svojih del v našo novo stavbo.</p>
@@ -55,7 +57,7 @@
                         </div>
                     </a>
                     <a href="./#galleryBasic">
-                        <div class="col-md-3 col-sm-6 btn">
+                        <div class="col-md-3 col-sm-6 col-xs-6 btn">
                             <div class="service-wrapper" style="padding-left: 5%">
                                 <h3>Galerija slik</h3>
                                 <p>Akademski slikar je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo pridih značilen za galerijske prostore.</p>
@@ -63,7 +65,7 @@
                         </div>
                     </a>
                     <a href="./#galleryBasic">
-                        <div class="col-md-3 col-sm-6 btn">
+                        <div class="col-md-3 col-sm-6 col-xs-6 btn">
                             <div class="service-wrapper" style="padding-left: 5%">
                                 <h3>Postavljanje slik</h3>
                                 <p>Akademski slikar je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo pridih značilen za galerijske prostore.</p>
