--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -2,11 +2,11 @@
 body,
 #app-content {
   min-height: 100vh;
+  min-width: 525px;
   width: 100%;
+  background-color: #e8f5e9;
 }
 .basicGalleryPage {
-  background-image: url("../images/backgrounds/betonZid.png");
-  background-repeat: repeat;
   min-height: 100vh;
 }
 .basicGalleryPage .row {
@@ -74,6 +74,12 @@ body,
   width: 100%;
   padding-top: 15%;
 }
+.firstPageTpl h1 h3 {
+  font-weight: 100;
+}
+.firstPageTpl p {
+  font-weight: 100;
+}
 .firstPageTpl .bs-header {
   position: relative;
   padding: 1%;
@@ -100,6 +106,7 @@ body,
 .firstPageTpl #bs-tail {
   position: relative;
   width: 100%;
+  max-height: 55%;
   color: #ffffff;
   background-color: #333333;
   opacity: 0.95;
@@ -164,35 +171,82 @@ img.firstPageTplBg {
 }
 /* Interview */
 .interviewPage {
+  width: 100%;
+  padding-top: 15%;
   /*background-image: url("../images/backgrounds/betonZid.png");*/
+}
+.interviewPage p {
+  text-align: justify;
+  font-size: large;
+}
+.interviewPage h5 {
+  text-align: justify;
+}
+.interviewPage .bs-header {
+  position: fixed;
+  padding: 1%;
+  width: 100%;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  background-color: #dc211c;
+  z-index: 2;
+}
+.interviewPage .bback {
+  height: 200000px;
+  min-height: 100%;
+  padding-top: 7%;
+  padding-left: 2%;
+  color: #ffffff;
+  background-color: #333333;
+  opacity: 0.95;
+  filter: alpha(opacity=95);
+  /* For IE8 and earlier */
+}
+.interviewPage .bback a {
+  color: #e8f5e9;
+  font-size: medium;
+}
+.interviewPage .wback {
+  padding-top: 5%;
+  background-color: #ffffff;
+  opacity: 0.95;
+  filter: alpha(opacity=95);
+  /* For IE8 and earlier */
 }
 .interviewPage .indexContainer {
   position: fixed;
-  font-size: 80%;
+  font-size: 100%;
 }
 .interviewPage .indexContainer ul {
   list-style: none;
+  align-content: center;
 }
 .interviewPage .indexContainer ul li {
-  padding: 3px 0;
+  text-align: justify;
 }
 .interviewPage .indexContainer ul li:hover {
   cursor: pointer;
-  border-left: 3px solid #000000;
-  padding-left: 5px;
+  border-left: 5px solid #dc211c;
 }
 .interviewPage .indexContainer ul li.active {
-  padding-left: 10px;
-  border-left: 3px solid #000000 !important;
-  font-weight: bolder;
+  border-left: 5px solid #ffffff !important;
+  font-weight: 600;
+  text-decoration: none;
 }
-@media screen and (max-width: 992px) {
-  .interviewPage .indexContainer {
-    position: static;
-  }
+.interviewPage #back {
+  align-items: baseline;
+  z-index: 1;
+  margin-left: -50%;
+  position: fixed;
+  -ms-transform: rotate(90deg);
+  /* IE 9 */
+  -webkit-transform: rotate(90deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(90deg);
 }
-@media screen and (max-width: 1500px) {
-  .interviewPage .indexContainer {
-    font-size: 80%;
-  }
+.interviewPage #back:hover {
+  -moz-box-shadow: 0 0 10px #ccc;
+  -webkit-box-shadow: 0 0 10px #ccc;
+  box-shadow: 0 0 10px #ccc;
 }
