--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -8,14 +8,33 @@
 body, #app-content {
   min-height: 100vh;
   width: 100%;
+  font-size: 110%;
 }
-
 
 .basicGalleryPage {
   background-image: url("../images/backgrounds/betonZid.png");
   background-repeat: repeat;
-  min-height: 100vh;
 
+  min-height: 100vh;
+  .btn-raised{font-size: 120%};
+  #topPadding{
+    height: 5vh;
+  }
+  .icons{
+    font-size:300%;
+  }
+  .chevron{
+    font-size: 400%;
+    position: absolute;
+    top: calc(~'50% - 40px');
+    display: inline-block;
+  }
+  .chevron:hover{
+    cursor: pointer;
+  }
+  #image{
+    cursor:pointer;
+  }
   .row {
     padding: 0;
     margin: 0;
@@ -51,18 +70,18 @@ body, #app-content {
     padding: 5px 0;
   }
   .imgContainer {
-    height: 50vh;
-    text-align: center;
-    img{
-      height: auto;
-      width: auto;
-      max-width: 100%;
-      max-height: 100%;
-      padding: 0 !important;
-      /*box-shadow: 4px 5px 2px @black;*/
-    }
-  }
-
+     vertical-align: center;
+     height: 65vh;
+     text-align: center;
+     img{
+       max-width: 100%;
+       max-height: 100%;
+       height: auto;
+       width: auto;
+       padding: 0 !important;
+       /*box-shadow: 4px 5px 2px @black;*/
+     }
+   }
   .galleryBasicImgDescription {
     margin-top: 1vh;
     padding: 15px;
